@startuml
!theme mono

title MONITOR 서비스 - 요약 클래스 다이어그램

package "com.travelplanner.monitor" {
    package "controller" {
        class MntrController
    }
    package "service" {
        interface BadgeService
        class BadgeServiceImpl
        interface DataCollectionService
        class DataCollectionServiceImpl
        class StatusJudgmentService
    }
    package "repository" {
        interface MonitoringRepository
        interface StatusHistoryRepository
    }
    package "client" {
        class GooglePlacesClient
        class OpenWeatherMapClient
        class GoogleDirectionsClient
        class AzureAppConfigClient
        class EventPublisher
    }
    package "domain" {
        class MonitoringTarget
        class StatusBadge
        class CollectedData
        class StatusHistory
    }
}

note right of MntrController
  API 매핑표
  ---
  getBadges: GET /badges 장소별 상태 배지 목록 조회
  getStatusDetail: GET /badges/{place_id}/detail 장소 상태 상세 조회
  triggerDataCollection: POST /monitor/collect 외부 데이터 수집 트리거
end note

MntrController --> BadgeService
MntrController --> DataCollectionService

BadgeServiceImpl ..|> BadgeService
DataCollectionServiceImpl ..|> DataCollectionService
DataCollectionServiceImpl --> StatusJudgmentService

BadgeServiceImpl --> MonitoringRepository
BadgeServiceImpl --> StatusHistoryRepository
DataCollectionServiceImpl --> MonitoringRepository
DataCollectionServiceImpl --> StatusHistoryRepository
DataCollectionServiceImpl --> GooglePlacesClient
DataCollectionServiceImpl --> OpenWeatherMapClient
DataCollectionServiceImpl --> GoogleDirectionsClient
DataCollectionServiceImpl --> EventPublisher
StatusJudgmentService --> AzureAppConfigClient

MonitoringRepository ..> MonitoringTarget
StatusHistoryRepository ..> StatusHistory
StatusBadge --> PlaceStatusEnum

@enduml
